# WebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini
include/: include.h
src/: client_handler.c  server.c  socket.c
www/: counter-strike.html  index.html  path-of-exile.html  styles.css
www/error/: 403.css  403.html  404.css  404.html
